--- a/new-tab/styles.css
+++ b/new-tab/styles.css
@@ -47,12 +47,12 @@ main {
       grid-template-columns: repeat(6, 180px);
   -ms-grid-rows: (180px)[4];
       grid-template-rows: repeat(4, 180px);
-      grid-template-areas: "one two two three three five" "one two two four four ten" "thirteen 14 15 16 17 18" "21 22 23 24 25 26";
+      grid-template-areas: "one two two three three 0" "one two two four four 0" "- - - - - -" "- - - - - -";
 }
 
 .box {
-  border-radius: 8px !important;
   border: 2px solid;
+  border-radius: 1rem !important;
 }
 
 .one {
@@ -60,7 +60,6 @@ main {
   -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: one;
-  border-color: #fdca40;
 }
 
 .two {
@@ -69,7 +68,6 @@ main {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: two;
-  border-color: #3772ff;
 }
 
 .three {
@@ -77,7 +75,6 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
   grid-area: three;
-  border-color: #fdca40;
 }
 
 .four {
@@ -85,5 +82,4 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
   grid-area: four;
-  border-color: #fdca40;
 }
