--- a/new-tab/styles.scss
+++ b/new-tab/styles.scss
@@ -33,13 +33,13 @@ main {
 }
 
 .yellow {
-  border-color: $yellow;
+  border-color: $yellow !important;
 }
 .blue {
-  border-color: $blue;
+  border-color: $blue !important;
 }
 .red {
-  border-color: $red;
+  border-color: $red !important;
 }
 
 .grid {
