Add Styling for Image

--- a/new-tab/styles.css
+++ b/new-tab/styles.css
@@ -95,3 +95,21 @@ main {
   -ms-grid-column-span: 2;
   grid-area: four;
 }
+
+#image {
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#image img {
+  width: auto;
+  height: 100%;
+}
