--- a/new-tab/styles.scss
+++ b/new-tab/styles.scss
@@ -70,3 +70,14 @@ main {
 .four {
   grid-area: four;
 }
+
+#image {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: auto;
+    height: 100%;
+  }
+}
