--- a/new-tab/styles.scss
+++ b/new-tab/styles.scss
@@ -3,7 +3,13 @@ $blue: #08f7fe;
 $red: #fe53bb;
 $green: #09f8d3;
 $yellow: #f5d300;
-$text: #e6e8e6;
+$text: #efefef;
+
+%center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 * {
   margin: 0;
@@ -15,7 +21,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: rgba($dark, 0.5);
+  background-color: rgba($dark, 0.7);
   color: $text;
   display: flex;
   justify-content: center;
@@ -34,9 +40,7 @@ main {
   max-height: 800px;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %center;
 }
 
 .yellow {
@@ -58,8 +62,8 @@ main {
   grid-template-columns: repeat(6, 180px);
   grid-template-rows: repeat(4, 150px);
   grid-template-areas:
-    "one three three four four 0"
     "one two two four four 0"
+    "one three three four four 0"
     "- - - - - -"
     "- - - - - -";
 }
@@ -87,19 +91,25 @@ main {
 
 #image {
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %center;
   img {
     width: auto;
     height: 100%;
   }
 }
 
+#time {
+  @extend %center;
+  padding: 2rem;
+  font-family: "Noto Sans JP";
+  font-weight: 900;
+  font-size: 3rem;
+  text-align: center;
+}
+
 #kanji {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  @extend %center;
+  justify-content: space-evenly !important;
   padding: 2rem;
   font-family: "Noto Sans JP";
   text-align: center;
@@ -109,9 +119,7 @@ main {
     font-size: 4rem;
   }
   div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %center;
     flex-direction: column;
   }
 }
