--- a/new-tab/styles.css
+++ b/new-tab/styles.css
@@ -1,4 +1,4 @@
-main, #image, #time, #kanji, #kanji div {
+main, .icon a, #image, #time, #kanji, #kanji div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,6 +108,32 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 2;
   grid-area: four;
+}
+
+.icon {
+  overflow: hidden;
+}
+
+.icon a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  font-size: 3rem;
+  font-family: "Montserrat";
+  line-height: 1;
+  color: #efefef;
+  -webkit-transition: 0.25s ease-in;
+  transition: 0.25s ease-in;
+}
+
+.icon a:hover {
+  background-color: rgba(8, 7, 8, 0.5);
+}
+
+.icon svg {
+  width: 4rem;
+  height: 4rem;
+  fill: currentColor;
 }
 
 /*
