--- a/new-tab/styles.scss
+++ b/new-tab/styles.scss
@@ -85,6 +85,30 @@ main {
   grid-area: four;
 }
 
+.icon {
+  overflow: hidden;
+  a {
+    @extend %center;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    font-size: 3rem;
+    font-family: "Montserrat";
+    line-height: 1;
+    color: $text;
+    transition: 0.25s ease-in;
+
+    &:hover {
+      background-color: rgba($dark, 0.5);
+    }
+  }
+  svg {
+    width: 4rem;
+    height: 4rem;
+    fill: currentColor;
+  }
+}
+
 /*
  * Styling Boxes with IDs
 */
