--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -1,9 +1,17 @@
-$dark: #080708;
-$blue: #08f7fe;
-$red: #fe53bb;
-$green: #09f8d3;
-$yellow: #f5d300;
-$text: #efefef;
+/*
+* Theme Color from Apple Visual Design Colors
+* https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color/
+*/
+$blue: rgb(0, 122, 255);
+$green: rgb(52, 199, 89);
+$indigo: rgb(88, 86, 214);
+$orange: rgb(255, 149, 0);
+$pink: rgb(255, 45, 85);
+$purple: rgb(175, 82, 222);
+$red: rgb(255, 59, 48);
+$teal: rgb(90, 200, 250);
+$yellow: rgb(255, 204, 0);
+$dark: rgb(28, 28, 30);
 
 %center {
   display: flex;
@@ -21,8 +29,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: rgba($dark, 0.7);
-  color: $text;
+  background-color: #fafafa;
+  color: $dark;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,17 +51,59 @@ main {
   @extend %center;
 }
 
-.yellow {
-  border-color: $yellow !important;
-}
 .blue {
   border-color: $blue !important;
-}
-.red {
-  border-color: $red !important;
+  a {
+    color: $blue !important;
+  }
 }
 .green {
   border-color: $green !important;
+  a {
+    color: $green !important;
+  }
+}
+.indigo {
+  border-color: $indigo !important;
+  a {
+    color: $indigo !important;
+  }
+}
+.orange {
+  border-color: $orange !important;
+  a {
+    color: $orange !important;
+  }
+}
+.pink {
+  border-color: $pink !important;
+  a {
+    color: $pink !important;
+  }
+}
+.purple {
+  border-color: $purple !important;
+  a {
+    color: $purple !important;
+  }
+}
+.red {
+  border-color: $red !important;
+  a {
+    color: $red !important;
+  }
+}
+.teal {
+  border-color: $teal !important;
+  a {
+    color: $teal !important;
+  }
+}
+.yellow {
+  border-color: $yellow !important;
+  a {
+    color: $yellow !important;
+  }
 }
 
 .grid {
@@ -62,14 +112,21 @@ main {
   grid-template-columns: repeat(6, 180px);
   grid-template-rows: repeat(4, 150px);
   grid-template-areas:
-    "one two two four four 0"
-    "one three three four four 0"
+    "one two two four four four"
+    "one three three four four four"
     "- - - - - -"
     "- - - - - -";
 }
-.box {
-  border: 2px solid;
+
+.button {
+  border-width: 3px 3px 6px;
+  border-style: solid;
   border-radius: 1rem !important;
+  transition: 0.2s ease-out;
+  &:hover {
+    border: 3px solid;
+    transform: translateY(3px);
+  }
 }
 
 .one {
@@ -95,12 +152,8 @@ main {
     font-size: 3rem;
     font-family: "Montserrat";
     line-height: 1;
-    color: $text;
+    color: $dark;
     transition: 0.25s ease-in;
-
-    &:hover {
-      background-color: rgba($dark, 0.5);
-    }
   }
   svg {
     width: 4rem;
