--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -2,7 +2,7 @@
 * Theme Color from Apple Visual Design Colors
 * https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color/
 */
-main, .icon a, #image, #time, #kanji, #kanji div {
+main, .icon a, #Poster, #Time, #Kanji, #Kanji div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,6 +53,9 @@ main {
   height: 100%;
 }
 
+/*
+ * Coloring Borders
+*/
 .blue {
   border-color: #007aff !important;
 }
@@ -125,6 +128,9 @@ main {
   color: #ffcc00 !important;
 }
 
+/*
+ * Grid
+*/
 .grid {
   display: -ms-grid;
   display: grid;
@@ -133,66 +139,54 @@ main {
       grid-template-columns: repeat(6, 180px);
   -ms-grid-rows: (150px)[4];
       grid-template-rows: repeat(4, 150px);
-      grid-template-areas: "one two two four four four" "one three three four four four" "- - - - - -" "- - - - - -";
+      grid-template-areas: "poster time time reader reader reader" "poster kanji kanji reader reader reader" "- - - - - -" "- - - - - -";
 }
 
-.button {
-  border-width: 3px 3px 6px;
-  border-style: solid;
-  border-radius: 1rem !important;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
-}
-
-.button:hover {
+.grid__item {
   border: 3px solid;
-  -webkit-transform: translateY(3px);
-          transform: translateY(3px);
+  border-radius: 1rem !important;
 }
 
 .one {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
   grid-area: one;
 }
 
 .two {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
   grid-area: two;
 }
 
 .three {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
   grid-area: three;
 }
 
 .four {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
   grid-area: four;
+}
+
+/*
+ * Buttons
+*/
+.button {
+  border: 3px solid;
 }
 
 .icon {
   overflow: hidden;
+  border-width: 3px 3px 6px;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+
+.icon:hover {
+  border-width: 3px;
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
 }
 
 .icon a {
   width: 100%;
   height: 100%;
   text-decoration: none;
-  font-size: 3rem;
-  font-family: "Montserrat";
-  line-height: 1;
-  color: #1c1c1e;
-  -webkit-transition: 0.25s ease-in;
-  transition: 0.25s ease-in;
 }
 
 .icon svg {
@@ -204,16 +198,24 @@ main {
 /*
  * Styling Boxes with IDs
 */
-#image {
+#Poster {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: poster;
   overflow: hidden;
 }
 
-#image img {
+#Poster img {
   width: auto;
   height: 100%;
 }
 
-#time {
+#Time {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: time;
   padding: 2rem;
   font-family: "Noto Sans JP";
   font-weight: 900;
@@ -221,7 +223,11 @@ main {
   text-align: center;
 }
 
-#kanji {
+#Kanji {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: kanji;
   -webkit-box-pack: space-evenly !important;
       -ms-flex-pack: space-evenly !important;
           justify-content: space-evenly !important;
@@ -231,13 +237,21 @@ main {
   line-height: 1;
 }
 
-#kanji h1 {
+#Kanji h1 {
   font-size: 4rem;
 }
 
-#kanji div {
+#Kanji div {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+#Reader {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-area: reader;
 }
