--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -51,6 +51,9 @@ main {
   @extend %center;
 }
 
+/*
+ * Coloring Borders
+*/
 .blue {
   border-color: $blue !important;
   a {
@@ -106,26 +109,23 @@ main {
   }
 }
 
+/*
+ * Grid
+*/
 .grid {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(6, 180px);
   grid-template-rows: repeat(4, 150px);
   grid-template-areas:
-    "one two two four four four"
-    "one three three four four four"
+    "poster time time reader reader reader"
+    "poster kanji kanji reader reader reader"
     "- - - - - -"
     "- - - - - -";
-}
 
-.button {
-  border-width: 3px 3px 6px;
-  border-style: solid;
-  border-radius: 1rem !important;
-  transition: 0.2s ease-out;
-  &:hover {
+  &__item {
     border: 3px solid;
-    transform: translateY(3px);
+    border-radius: 1rem !important;
   }
 }
 
@@ -142,19 +142,29 @@ main {
   grid-area: four;
 }
 
+/*
+ * Buttons
+*/
+.button {
+  border: 3px solid;
+}
+
 .icon {
   overflow: hidden;
+  border-width: 3px 3px 6px;
+  transition: 0.2s ease-out;
+  &:hover {
+    border-width: 3px;
+    transform: translateY(3px);
+  }
+
   a {
     @extend %center;
     width: 100%;
     height: 100%;
     text-decoration: none;
-    font-size: 3rem;
-    font-family: "Montserrat";
-    line-height: 1;
-    color: $dark;
-    transition: 0.25s ease-in;
   }
+
   svg {
     width: 4rem;
     height: 4rem;
@@ -166,17 +176,19 @@ main {
  * Styling Boxes with IDs
 */
 
-#image {
-  overflow: hidden;
+#Poster {
   @extend %center;
+  grid-area: poster;
+  overflow: hidden;
   img {
     width: auto;
     height: 100%;
   }
 }
 
-#time {
+#Time {
   @extend %center;
+  grid-area: time;
   padding: 2rem;
   font-family: "Noto Sans JP";
   font-weight: 900;
@@ -184,8 +196,9 @@ main {
   text-align: center;
 }
 
-#kanji {
+#Kanji {
   @extend %center;
+  grid-area: kanji;
   justify-content: space-evenly !important;
   padding: 2rem;
   font-family: "Noto Sans JP";
@@ -199,4 +212,8 @@ main {
     @extend %center;
     flex-direction: column;
   }
+}
+
+#Reader {
+  grid-area: reader;
 }
