--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -2,7 +2,7 @@
 * Theme Color from Apple Visual Design Colors
 * https://developer.apple.com/design/human-interface-guidelines/ios/visual-design/color/
 */
-main, .icon a, #Poster, #Time, #Kanji, #Kanji div {
+main, #Poster, #Time, #Kanji, #Kanji div, #Icons .icon a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -139,7 +139,7 @@ main {
       grid-template-columns: repeat(6, 180px);
   -ms-grid-rows: (150px)[4];
       grid-template-rows: repeat(4, 150px);
-      grid-template-areas: "poster time time reader reader reader" "poster kanji kanji reader reader reader" "- - - - - -" "- - - - - -";
+      grid-template-areas: "poster time time reader reader reader" "poster kanji kanji reader reader reader" "- - - icons icons icons" "- - - icons icons icons";
 }
 
 .grid__item {
@@ -168,31 +168,6 @@ main {
 */
 .button {
   border: 3px solid;
-}
-
-.icon {
-  overflow: hidden;
-  border-width: 3px 3px 6px;
-  -webkit-transition: 0.2s ease-out;
-  transition: 0.2s ease-out;
-}
-
-.icon:hover {
-  border-width: 3px;
-  -webkit-transform: translateY(3px);
-          transform: translateY(3px);
-}
-
-.icon a {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-}
-
-.icon svg {
-  width: 4rem;
-  height: 4rem;
-  fill: currentColor;
 }
 
 /*
@@ -254,4 +229,46 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: reader;
+}
+
+#Icons {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-area: icons;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+#Icons .icon {
+  overflow: hidden;
+  border-width: 3px 3px 6px;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  max-width: 6rem;
+  max-height: 6rem;
+}
+
+#Icons .icon:hover {
+  border-width: 3px;
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
+}
+
+#Icons .icon a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
+#Icons .icon svg {
+  width: 3rem;
+  height: 3rem;
+  fill: currentColor;
 }
