--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -120,8 +120,8 @@ main {
   grid-template-areas:
     "poster time time reader reader reader"
     "poster kanji kanji reader reader reader"
-    "- - - - - -"
-    "- - - - - -";
+    "- - - icons icons icons"
+    "- - - icons icons icons";
 
   &__item {
     border: 3px solid;
@@ -147,29 +147,6 @@ main {
 */
 .button {
   border: 3px solid;
-}
-
-.icon {
-  overflow: hidden;
-  border-width: 3px 3px 6px;
-  transition: 0.2s ease-out;
-  &:hover {
-    border-width: 3px;
-    transform: translateY(3px);
-  }
-
-  a {
-    @extend %center;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-  }
-
-  svg {
-    width: 4rem;
-    height: 4rem;
-    fill: currentColor;
-  }
 }
 
 /*
@@ -216,4 +193,37 @@ main {
 
 #Reader {
   grid-area: reader;
+}
+
+#Icons {
+  grid-area: icons;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 1rem;
+
+  .icon {
+    overflow: hidden;
+    border-width: 3px 3px 6px;
+    transition: 0.2s ease-out;
+    max-width: 6rem;
+    max-height: 6rem;
+    &:hover {
+      border-width: 3px;
+      transform: translateY(3px);
+    }
+
+    a {
+      @extend %center;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+    }
+
+    svg {
+      width: 3rem;
+      height: 3rem;
+      fill: currentColor;
+    }
+  }
 }
