--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -25,8 +25,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: #fafafa;
-  color: #1c1c1e;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,6 +49,74 @@ main {
   max-height: 800px;
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+/*
+ * Light and Dark Themes
+*/
+.theme__dark {
+  background-color: #161b22 !important;
+  color: #fafafa !important;
+}
+
+.theme__light {
+  background-color: #fafafa !important;
+  color: #1c1c1e !important;
+}
+
+#Toggle {
+  width: 4.4rem;
+  height: 2.4rem;
+  border: 2px solid currentColor;
+  border-radius: 999px;
+  position: absolute;
+  top: 1rem;
+  right: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.2rem;
+}
+
+#Toggle button {
+  width: 3.6rem;
+  height: 2rem;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+#Toggle button svg {
+  fill: currentColor !important;
+}
+
+#Toggle button .sun {
+  position: absolute;
+  right: 0;
+  fill: #161b22;
+  stroke: #161b22;
+}
+
+#Toggle button .moon {
+  position: absolute;
+  left: 0;
+  fill: #fafafa;
+  stroke: #fafafa;
 }
 
 /*
