--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -29,8 +29,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: #fafafa;
-  color: $dark;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,6 +47,59 @@ main {
   width: 100%;
   height: 100%;
   @extend %center;
+  position: relative;
+}
+
+/*
+ * Light and Dark Themes
+*/
+.theme__dark {
+  background-color: #161b22 !important;
+  color: #fafafa !important;
+}
+.theme__light {
+  background-color: #fafafa !important;
+  color: $dark !important;
+}
+#Toggle {
+  width: 4.4rem;
+  height: 2.4rem;
+  border: 2px solid currentColor;
+  border-radius: 999px;
+  position: absolute;
+  top: 1rem;
+  right: 4rem;
+  display: flex;
+  align-items: center;
+  padding: 0.2rem;
+
+  button {
+    width: 3.6rem;
+    height: 2rem;
+    border: none;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    svg {
+      fill: currentColor !important;
+    }
+    .sun {
+      position: absolute;
+      right: 0;
+      fill: #161b22;
+      stroke: #161b22;
+    }
+    .moon {
+      position: absolute;
+      left: 0;
+      fill: #fafafa;
+      stroke: #fafafa;
+    }
+  }
 }
 
 /*
