--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -293,6 +293,44 @@ main {
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-area: reader;
+  padding: 1rem;
+  font-family: "Noto Sans JP";
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+#Reader .settings {
+  width: 100%;
+  height: 2rem;
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#Reader .settings__chapter, #Reader .settings__next {
+  height: 100%;
+}
+
+#Reader div {
+  overflow-y: scroll;
+  height: calc(100% - 3rem);
+}
+
+#Reader h3 {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+#Reader p {
+  font-size: 1.2rem;
 }
 
 /*
@@ -338,4 +376,19 @@ main {
   width: 3rem;
   height: 3rem;
   fill: currentColor;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #2a3441;
+  border-radius: 999px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #161b22;
+}
+
+::-webkit-scrollbar {
+  background-color: #161b22;
+  height: 0.5rem;
+  width: 0.5rem;
 }
