Add Text to Reader with Next Function

--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -248,7 +248,7 @@ main {
   .settings {
     width: 100%;
     height: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -257,7 +257,7 @@ main {
       height: 100%;
     }
   }
-  div {
+  #Text {
     overflow-y: scroll;
     height: calc(100% - 3rem);
   }
@@ -307,14 +307,16 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: lighten(#161b22, 10);
+  background-color: #bbb;
   border-radius: 999px;
 }
 ::-webkit-scrollbar-track {
-  background-color: #161b22;
+  background-color: #eee;
+  border-radius: 999px;
 }
 ::-webkit-scrollbar {
-  background-color: #161b22;
+  background-color: #eee;
+  border-radius: 999px;
   height: 0.5rem;
   width: 0.5rem;
 }
