--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -303,7 +303,7 @@ main {
 #Reader .settings {
   width: 100%;
   height: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -319,7 +319,7 @@ main {
   height: 100%;
 }
 
-#Reader div {
+#Reader #Text {
   overflow-y: scroll;
   height: calc(100% - 3rem);
 }
@@ -379,16 +379,18 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #2a3441;
+  background-color: #bbb;
   border-radius: 999px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #161b22;
+  background-color: #eee;
+  border-radius: 999px;
 }
 
 ::-webkit-scrollbar {
-  background-color: #161b22;
+  background-color: #eee;
+  border-radius: 999px;
   height: 0.5rem;
   width: 0.5rem;
 }
