--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -107,6 +107,7 @@ main {
 .dark {
   border-color: $blue !important;
 }
+
 /*
  * Coloring Borders
 */
@@ -252,9 +253,21 @@ main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-weight: 600;
     &__chapter,
     &__next {
       height: 100%;
+    }
+    #Next {
+      padding: 0.5rem;
+      background-color: transparent;
+      color: currentColor;
+      border: none;
+      font-weight: 600;
+      font-size: 1rem;
+      &:active {
+        outline: none;
+      }
     }
   }
   #Text {
