--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -254,11 +254,11 @@ main {
     justify-content: space-evenly;
     align-items: center;
     font-weight: 600;
-    &__chapter,
-    &__next {
+    #currentChapter {
       height: 100%;
     }
     #Next {
+      height: 100%;
       padding: 0.5rem;
       background-color: transparent;
       color: currentColor;
