Add Condion for Book ENd

--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -273,6 +273,7 @@ main {
   #Text {
     overflow-y: scroll;
     height: calc(100% - 3rem);
+    padding-right: 1rem;
   }
   h3 {
     margin-bottom: 0.5rem;
