--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -12,6 +12,8 @@ $red: rgb(255, 59, 48);
 $teal: rgb(90, 200, 250);
 $yellow: rgb(255, 204, 0);
 $dark: rgb(28, 28, 30);
+$gray-light: rgb(242, 242, 247);
+$gray-dark: rgb(90, 90, 102);
 
 %center {
   display: flex;
@@ -51,15 +53,37 @@ main {
 }
 
 /*
+ * Scroll Bar Mixin
+ */
+
+@mixin scrollBar($color) {
+  ::-webkit-scrollbar-thumb {
+    background-color: darken($color, 10);
+    border-radius: 999px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: $color;
+    border-radius: 999px;
+  }
+  ::-webkit-scrollbar {
+    background-color: $color;
+    border-radius: 999px;
+    height: 0.5rem;
+    width: 0.5rem;
+  }
+}
+/*
  * Light and Dark Themes
 */
 .theme__dark {
   background-color: #161b22 !important;
   color: #fafafa !important;
+  @include scrollBar($gray-dark);
 }
 .theme__light {
   background-color: #fafafa !important;
   color: $dark !important;
+  @include scrollBar($gray-light);
 }
 #Toggle {
   width: 4.4rem;
@@ -318,19 +342,4 @@ main {
       fill: currentColor;
     }
   }
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #bbb;
-  border-radius: 999px;
-}
-::-webkit-scrollbar-track {
-  background-color: #eee;
-  border-radius: 999px;
-}
-::-webkit-scrollbar {
-  background-color: #eee;
-  border-radius: 999px;
-  height: 0.5rem;
-  width: 0.5rem;
 }
