Add Audio Section

--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -250,7 +250,7 @@ main {
       grid-template-columns: repeat(6, 180px);
   -ms-grid-rows: (150px)[4];
       grid-template-rows: repeat(4, 150px);
-      grid-template-areas: "poster time  time  reader reader reader" "poster kanji kanji reader reader reader" "-      -     -     icons  icons  icons" "-      -     -     icons  icons  icons";
+      grid-template-areas: "poster time  time  reader reader reader" "poster kanji kanji reader reader reader" "-      -     -     icons  icons  icons" "audio  audio audio icons  icons  icons";
 }
 
 .grid__item {
@@ -384,6 +384,71 @@ main {
 
 #Reader p {
   font-size: 1.2rem;
+}
+
+/*
+ * Audio Section
+ */
+#Audio {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: audio;
+  padding: 1rem;
+}
+
+#Audio .audio {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-areas: "img title title" "img track track";
+  gap: 0.5rem;
+}
+
+#Audio .audio > div {
+  height: 100%;
+}
+
+#Audio .audio img {
+  width: 100%;
+  height: auto;
+}
+
+#Audio .audio__img {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: img;
+  border-radius: 1rem !important;
+  overflow: hidden;
+}
+
+#Audio .audio__title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: title;
+  font-family: "Noto Sans JP";
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  overflow: hidden;
+}
+
+#Audio .audio__track {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: track;
+}
+
+#Audio .audio__track audio {
+  margin-top: auto;
+  height: 100%;
+  width: 100%;
 }
 
 /*
