--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -202,7 +202,7 @@ main {
     "poster time  time  reader reader reader"
     "poster kanji kanji reader reader reader"
     "-      -     -     icons  icons  icons"
-    "-      -     -     icons  icons  icons";
+    "audio  audio audio icons  icons  icons";
 
   &__item {
     border: 3px solid;
@@ -305,6 +305,50 @@ main {
   }
   p {
     font-size: 1.2rem;
+  }
+}
+
+/*
+ * Audio Section
+ */
+#Audio {
+  grid-area: audio;
+  padding: 1rem;
+  .audio {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "img title title" "img track track";
+    gap: 0.5rem;
+    & > div {
+      height: 100%;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
+    &__img {
+      grid-area: img;
+      border-radius: 1rem !important;
+      overflow: hidden;
+    }
+    &__title {
+      grid-area: title;
+      font-family: "Noto Sans JP";
+      font-weight: 500;
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
+      overflow: hidden;
+    }
+    &__track {
+      grid-area: track;
+      audio {
+        margin-top: auto;
+        height: 100%;
+        width: 100%;
+      }
+    }
   }
 }
 
