Add Quotes Section

--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -250,7 +250,7 @@ main {
       grid-template-columns: repeat(6, 180px);
   -ms-grid-rows: (150px)[4];
       grid-template-rows: repeat(4, 150px);
-      grid-template-areas: "poster time  time  reader reader reader" "poster kanji kanji reader reader reader" "-      -     -     icons  icons  icons" "audio  audio audio icons  icons  icons";
+      grid-template-areas: "poster time  time  reader reader reader" "poster kanji kanji reader reader reader" "quote  quote quote icons  icons  icons" "audio  audio audio icons  icons  icons";
 }
 
 .grid__item {
@@ -387,6 +387,17 @@ main {
 }
 
 /*
+ * Quote Section
+ */
+#Quote {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: quote;
+  padding: 1rem;
+}
+
+/*
  * Audio Section
  */
 #Audio {
@@ -394,18 +405,19 @@ main {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: audio;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 #Audio .audio {
   width: 100%;
   height: 100%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-areas: "img title title" "img track track";
-  gap: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 #Audio .audio > div {
@@ -417,20 +429,7 @@ main {
   height: auto;
 }
 
-#Audio .audio__img {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 1;
-  grid-area: img;
-  border-radius: 1rem !important;
-  overflow: hidden;
-}
-
 #Audio .audio__title {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-area: title;
   font-family: "Noto Sans JP";
   font-weight: 500;
   font-size: 1rem;
@@ -439,9 +438,6 @@ main {
 }
 
 #Audio .audio__track {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
   grid-area: track;
 }
 
@@ -495,3 +491,4 @@ main {
   height: 3rem;
   fill: currentColor;
 }
+/*# sourceMappingURL=styles.css.map */
