--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -201,7 +201,7 @@ main {
   grid-template-areas:
     "poster time  time  reader reader reader"
     "poster kanji kanji reader reader reader"
-    "-      -     -     icons  icons  icons"
+    "quote  quote quote icons  icons  icons"
     "audio  audio audio icons  icons  icons";
 
   &__item {
@@ -309,18 +309,24 @@ main {
 }
 
 /*
+ * Quote Section
+ */
+#Quote {
+  grid-area: quote;
+  padding: 1rem;
+}
+
+/*
  * Audio Section
  */
 #Audio {
   grid-area: audio;
-  padding: 1rem;
+  padding: 2rem;
   .audio {
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "img title title" "img track track";
-    gap: 0.5rem;
+    display: flex;
+    flex-direction: column;
     & > div {
       height: 100%;
     }
@@ -328,13 +334,7 @@ main {
       width: 100%;
       height: auto;
     }
-    &__img {
-      grid-area: img;
-      border-radius: 1rem !important;
-      overflow: hidden;
-    }
     &__title {
-      grid-area: title;
       font-family: "Noto Sans JP";
       font-weight: 500;
       font-size: 1rem;
