--- a/new-tab/css/styles.css
+++ b/new-tab/css/styles.css
@@ -397,6 +397,18 @@ main {
   padding: 1rem;
 }
 
+#Quote .quote {
+  font-size: 1rem;
+}
+
+#Quote .quote__text {
+  margin-bottom: 0.25rem;
+}
+
+#Quote .quote__author {
+  font-weight: 600;
+}
+
 /*
  * Audio Section
  */
@@ -491,4 +503,3 @@ main {
   height: 3rem;
   fill: currentColor;
 }
-/*# sourceMappingURL=styles.css.map */
