--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -314,6 +314,15 @@ main {
 #Quote {
   grid-area: quote;
   padding: 1rem;
+  .quote {
+    font-size: 1rem;
+    &__text {
+      margin-bottom: 0.25rem;
+    }
+    &__author {
+      font-weight: 600;
+    }
+  }
 }
 
 /*
